--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "whatschat",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,5 +22,6 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
     "sequelize": "^6.28.0"
-  }
+  },
+  "description": ""
 }
